<resources>
    <string name="app_name">Sudoku</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id"></string>
    <string name="IMEI_PSD_HOME_BANNER">ca-app-pub-1488497497647050/1496975120</string>
    <string name="Sudoku_banner">ca-app-pub-1488497497647050/1376679637</string>
    <string name="Test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="App_ID">ca-app-pub-1488497497647050~6742428320</string>
    <string name="native_ad_unit_id">ca-app-pub-1488497497647050/6010487502</string>
    <string name="con">Continue</string>
    <string name="new_game">New Game</string>
    <string name="high_score">High Score</string>
    <string name="tutorial">Tutorial</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nAd">360x132</string>
    <string-array name="difficulty">
        <item>Select Difficulty…</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Very Hard</item>
    </string-array>
</resources>
